--- a/assets/html/biblioteca.html
+++ b/assets/html/biblioteca.html
@@ -16,7 +16,7 @@
 
     <header id="cabecalho"> 
 
-        <a href="index.html">
+        <a href="../../index.html">
 
             <img src="../img/logo-crazy4games.svg" alt="logo crazy4games" id="logo-crazy">
             <h1 id="crazy">Crazy4Games</h1>
